--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "cdk"
   ],
   "main": "lib/index.js",
-  "license": "Apache-2.0",
+  "license": "UNLICENSED",
   "publishConfig": {
     "access": "public"
   },
