--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,6 @@
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
 /API.md linguist-generated
-/package-lock.json linguist-generated
 /package.json linguist-generated
 /tsconfig.dev.json linguist-generated
+/yarn.lock linguist-generated
