--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           node-version: lts/*
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --check-files --frozen-lockfile
       - name: release
         run: npx projen release
       - name: Check if version has already been tagged
@@ -110,7 +110,7 @@ jobs:
         with:
           path: .repo
       - name: Install Dependencies
-        run: cd .repo && npm ci
+        run: cd .repo && yarn install --check-files --frozen-lockfile
       - name: Extract build artifact
         run: tar --strip-components=1 -xzvf dist/js/*.tgz -C .repo
       - name: Move build artifact out of the way
